Mobile sidebar nav item alignment fix

--- a/src/styles/_layouts.scss
+++ b/src/styles/_layouts.scss
@@ -126,6 +126,7 @@
       height: unset;
       z-index: 1;
       top: 0;
+      justify-content: flex-start;
     }
   }
   > main {
